bin/testsuite/tests/compiler/src/errors/compiler4111.swg
#global testerror "Err0722"
#test
{
    @asssert(false)
}